added profile image

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <div class="FrontPageName">
           <img src="FrontPageName.png" alt="FrontpageName" class="front-page-name">
         </div>
+        <div class="front-page-profile-div">
+          <img src="ProfileImage.jpg" alt="ProfileImage" id="front-page-profile">
+        </div>
         <img src="LogoInBlack.png" alt="LogoInBlack" id="logo-in-black" >
 
     </main>
