profile with pic and video

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
         </div>
         <img src="LogoInBlack.png" alt="LogoInBlack" id="logo-in-black" >
 
+        <video id="nelly-richae-vid" autoplay loop muted playsinline style="pointer-events: none;"\>
+        <source src="NellyRichae.mp4" type="video/mp4">
+      </video>
+        
+
+        </video>
+
     </main>
 	<script src="index.js"></script>
   </body>
