circular buttons with colored border, still want to adjust icons but will do later

--- a/index.html
+++ b/index.html
@@ -23,26 +23,27 @@
 
             <div class="main-page">
               <video id="nelly-richae-vid" autoplay loop muted playsinline style="pointer-events: none;"\>
-                <source src="NellyRichae3.mp4" type="video/mp4">
+                <source src="MainPageVid.mp4" type="video/mp4">
               </video>
               
                 <div id="front-page-options">
                       <div class="FrontPageName">
-                        <img src="FrontPageName.png" alt="FrontpageName" class="front-page-name">
+                        <img id="front-page-name" src="FrontPageName.png" alt="FrontpageName" class="front-page-name">
                       </div>
 
                         <div id="front-page-buttons">
-                            <button id="front-page-button" class="SWE-button">
-                              <> Software Engineer <>
-                            </button>
+                            <button id="front-page-button" class="SWE-button"
+                              data-hover="Software Engineer">
+                              <>
+                        </button>
                             <button id="front-page-button" class="Artist-button">
-                              Artist ❀
+                              ✎
                             </button>
                             <button id="front-page-button" class="Athlete-button"> 
-                              💦 Athlete
+                              ATH
                             </button>
                             <button id="front-page-button" class="Extrovert-button">
-                              Extrovert ツ
+                              ツ
                             </button>
                         </div>
                 </div>
@@ -89,5 +90,6 @@
       
     </main>
 	<script src="index.js"></script>
+  <script src="main-page.js"></script>
   </body>
 </html>
