started athlete page

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
                       </div>
 
                         <div id="front-page-buttons">
-                            <button id="front-page-button" class="SWE-button"
-                              data-hover="Software Engineer">
+
+                            <button id="front-page-button" class="SWE-button">
                               <>
                         </button>
                             <button id="front-page-button" class="Artist-button">
                               ✎
                             </button>
                             <button id="front-page-button" class="Athlete-button"> 
-                              ATH
+                              <a href = "athlete-page.html">ATH</a>
                             </button>
                             <button id="front-page-button" class="Extrovert-button">
                               ツ
