happy with athlete-page-header

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                               ✎
                             </button>
                             <button id="front-page-button" class="Athlete-button"> 
-                              <a href = "athlete-page.html">ATH</a>
+                              <a href = "athlete-page-test.html">ATH</a>
                             </button>
                             <button id="front-page-button" class="Extrovert-button">
-                              ツ
+                              <a href = "extrovert-page.html">ツ</a>
                             </button>
                         </div>
                 </div>
